--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,10 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  transform: scale(0.5);
 }
 .card {
-  background-color: white;
+  
   height: 1000px;
   max-width: 650px;
   display: flex;
@@ -53,21 +54,20 @@ p {
 }
 
 /* MEDIA QUERIES */
-@media only screen and (max-width: 425px){
-    .main-container{
-        width: 335px;
-        height: 100vh;
-    }
-    .card{
-        margin: 10px;
-        
-    }
-	p{
-        font-size: 0.6em;
-    }
-    h1{
-        font-size: 0.93em;
-        /* background-color: yellow; */
-        padding: 10px;
-    }
+@media only screen and (max-width: 425px) {
+  .main-container {
+    width: 335px;
+    height: 100vh;
+  }
+  .card {
+    margin: 10px;
+  }
+  p {
+    font-size: 0.6em;
+  }
+  h1 {
+    font-size: 0.93em;
+    /* background-color: yellow; */
+    padding: 10px;
+  }
 }
