--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
   transform: scale(0.5);
 }
 .card {
-  
+  background-color: white;
   height: 1000px;
   max-width: 650px;
   display: flex;
